# System_design

./: README.md
Lab2/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  openapi.yaml
Lab2/config/: config.yaml
Lab2/src/: auth.hpp  handlers.cpp  handlers.hpp  main.cpp  models.hpp
Lab2/tests/: unit_tests.cpp
Лаб 1/: README.md  workspace.dsl
Лаб 2/: .dockerignore  Dockerfile  README.md  openapi.yaml
Лаб 2/cmake/: Findodbc.cmake
Лаб 2/config/: config.yaml
Лаб 2/src/: auth.cpp  handlers.cpp  main.cpp  models.cpp
Лаб 2/tests/: unit_tests.cpp
Лаб 3/: CMakeLists.txt  Dockerfile  README.md  data.sql  docker-compose.yaml  optimization.md  queries.sql  schema.sql
Лаб 3/config/: static_config.yaml
Лаб 3/src/: auth.cpp  auth.hpp  handlers.cpp  handlers.hpp  main.cpp  models.cpp  models.hpp
Лаб 4/: CMakeLists.txt  README.md  aggregation.js  data.js  docker-compose.yaml  queries.js  schema_design.md  validation.js
Лаб 4/src/: main.cpp
Лаб 4/src/api/: api_utils.cpp  api_utils.hpp
Лаб 4/src/api/handlers/: auth_handlers.cpp  user_handlers.cpp
Лаб 4/src/api/middleware/: session_auth_middleware.hpp
Лаб 4/src/components/: hotel_booking_service_component.hpp
Лаб 4/src/domain/: models.hpp  service.cpp  service.hpp
Лаб 5/: CMakeLists.txt  Dockerfile  README.md  data.sql  docker-compose.yaml  performance_design.md  queries.sql  schema.sql
Лаб 5/cmake/: Findodbc.cmake
Лаб 5/config/: config.yaml  static_config.yaml
Лаб 5/src/: auth.cpp  auth.hpp  cache.cpp  cache.hpp  handlers.cpp  handlers.hpp  main.cpp  models.cpp  models.hpp  rate_limiter.cpp  rate_limiter.hpp
Лаб 6/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  event_catalog.md  event_driven_design.md  openapi.yaml
Лаб 6/src/: main.cpp
Лаб 6/src/api/handlers/: auth_handlers.hpp  booking_handlers.cpp  booking_handlers.hpp  hotel_handlers.cpp  hotel_handlers.hpp  user_handlers.hpp
Лаб 6/src/api/middleware/: session_auth_middleware.cpp
Лаб 6/src/domain/: hotel_booking_service.cpp  hotel_booking_service.hpp  models.hpp
Лаб 6/src/events/: event_publisher.cpp  event_publisher.hpp  mailer_consumer.cpp  mailer_consumer.hpp
